[metadata]
name = scETM
version = 0.5.1alpha
author = Huiyu Cai, Yifan Zhao, Yue Li
author_email = hy_cai@pku.edu.cn
description = Single cell embedded topic model for integrated scRNA-seq data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hui2000ji/scETM/
project_urls =
    Bug Tracker = https://github.com/hui2000ji/scETM/issues
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.5
    numpy>=1.16.2
    matplotlib>=3.1.2
    scikit-learn>=0.20.3
    h5py>=2.9.0
    pandas>=0.25
    tqdm>=4.31.1
    anndata>=0.7
    scanpy>=1.4.6
    scipy>=1.0
    louvain>=0.6.1
    leidenalg>=0.7.0
    psutil

[options.packages.find]
where = src
